<resources>
    <string name="app_name">nico_test</string>
    <string name="ok" translatable="false">OK</string>
    <string name="hello">Hello</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="avatar" translatable="false">Avatar</string>
    <string name="login" translatable="false">Login</string>
    <string name="password" translatable="false">Password</string>
    <string name="name" translatable="false">Имя</string>
    <string name="name1" translatable="false">Фамилия</string>
    <string name="name2" translatable="false">Отчество</string>
    <string name="done" translatable="false">Готово</string>
</resources>